# django-pg-react

./: .gitignore
backend/: pyproject.toml
backend/config/: settings.py
frontend/src/: App.tsx
