[tool.poetry]
name = "myappbackend"
version = "0.1.0"
description = ""
authors = ["Bruna Andrade"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
django-cors-headers = "^4.9.0"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
